--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "file-loader": "^6.2.0",
+    "howler": "^2.2.4",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
